[package]
name = "kafka-windows-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kafka-windows-example"
path = "src/main.rs"

[dependencies]
rdkafka = { version = "0.37.0", default-features = false, features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["rdkafka/tokio"]

# Consistent features for all platforms
ssl-vendored = ["rdkafka/ssl-vendored"]
sasl = ["rdkafka/sasl"]  
cmake-build = ["rdkafka/cmake-build"]

# Platform-specific combinations
dev = ["tokio-runtime", "ssl-vendored", "sasl", "cmake-build"]
windows = ["tokio-runtime", "ssl-vendored", "cmake-build"]
linux = ["tokio-runtime", "ssl-vendored", "sasl", "cmake-build"]

[profile.release]
opt-level = "s"
lto = true
strip = true
